--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,18 +13,29 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.13.2]
+        python-version: [3.7, 3.8, 3.9, 3.10]
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Set up Database (SQLite or other)
+      run: |
+        python manage.py migrate  # Apply database migrations
+        
     - name: Run Tests
       run: |
-        python manage.py runserver
+        python manage.py test  # Run Django tests
+
+    - name: Collect static files
+      run: |
+        python manage.py collectstatic --noinput  # Collect static files (useful for production deploy)
